--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@ p {
 #hero {
 	/* background-image: url(./img/hero-bg.png); */
 	/* background-color: powderblue; */
+	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 	background-size: cover;
 	background-position: top center;
 	position: relative;
@@ -214,6 +215,7 @@ p {
 	top: 0;
 	height: 100%;
 	width: 100%;
+	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 	background-color: black;
 	opacity: 0.7;
 	z-index: -1;
